vuejs first commit

--- a/bower.json
+++ b/bower.json
@@ -61,6 +61,7 @@
     "angular-file-upload": "^2.3.4",
     "ng-tags-input": "3.1.1",
     "angular-route": "^1.6.2",
-    "xregexp": "^3.1.1"
+    "xregexp": "^3.1.1",
+    "vue": "^2.2.2"
   }
 }
