--- a/bower.json
+++ b/bower.json
@@ -63,6 +63,7 @@
     "angular-route": "^1.6.2",
     "xregexp": "^3.1.1",
     "vue": "^2.2.2",
-    "vue-resource": "^1.2.1"
+    "vue-resource": "^1.2.1",
+    "vue.draggable": "^2.9.0"
   }
 }
