--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "maatwebsite/excel": "^2.1",
         "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "~6.0",
-        "pusher/pusher-php-server": "^2.6"
+        "pusher/pusher-php-server": "^2.6",
+        "google/recaptcha": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
