--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "doctrine/dbal": "^2.5",
         "guzzlehttp/guzzle": "~6.0",
         "pusher/pusher-php-server": "^2.6",
-        "google/recaptcha": "^1.1"
+        "google/recaptcha": "^1.1",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
